--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ vglog*
 c/*.test
 cpp/*.test
 
+apps/mosquitto_passwd/mosquitto_passwd
+
 build/
 
 client/mosquitto_pub
@@ -51,7 +53,6 @@ out/
 
 src/db_dump/mosquitto_db_dump
 src/mosquitto
-src/mosquitto_passwd
 
 test/broker/broker.pid
 test/test_client
