--- a/plugins/message-timestamp/Makefile
+++ b/plugins/message-timestamp/Makefile
@@ -1,4 +1,24 @@
-all : mosquitto_timestamp.so
+.PHONY : all binary check clean reallyclean test install uninstall
 
-mosquitto_timestamp.so : mosquitto_timestamp.c
+PLUGIN_NAME=mosquitto_message_timestamp
+
+all : binary
+
+binary : ${PLUGIN_NAME}.so
+
+${PLUGIN_NAME}.so : ${PLUGIN_NAME}.c
 	$(CC) -I../../include -fPIC -shared $< -o $@
+
+reallyclean : clean
+clean:
+	-rm -f *.o ${PLUGIN_NAME}.so *.gcda *.gcno
+
+check: test
+test:
+
+install: ${PLUGIN_NAME}.so
+	$(INSTALL) -d "${DESTDIR}$(prefix)/lib"
+	$(INSTALL) ${STRIP_OPTS} ${PLUGIN_NAME}.so "${DESTDIR}${prefix}/lib/${PLUGIN_NAME}.so"
+
+uninstall :
+	-rm -f "${DESTDIR}${prefix}/lib/${PLUGIN_NAME}.so"
