Consistent use of config.mk.

--- a/plugins/message-timestamp/Makefile
+++ b/plugins/message-timestamp/Makefile
@@ -1,3 +1,5 @@
+include ../../config.mk
+
 .PHONY : all binary check clean reallyclean test install uninstall
 
 PLUGIN_NAME=mosquitto_message_timestamp
@@ -7,7 +9,7 @@ all : binary
 binary : ${PLUGIN_NAME}.so
 
 ${PLUGIN_NAME}.so : ${PLUGIN_NAME}.c
-	$(CC) -I../../include -fPIC -shared $< -o $@
+	$(CROSS_COMPILE)$(CC) $(PLUGIN_CPPFLAGS) $(PLUGIN_CFLAGS) $(PLUGIN_LDFLAGS) -fPIC -shared $< -o $@
 
 reallyclean : clean
 clean:
