perform cjson discovery only if WITH_CJSON=ON
When using cmake to build the project, cJson discovery
should only be performed if WITH_CJSON=ON.

Closes #2026.

Signed-off-by: Boris Feinstein <madhat1@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,12 +99,14 @@ if (WITH_DLT)
 	add_definitions("-DWITH_DLT")
 endif (WITH_DLT)
 
-FIND_PACKAGE(cJSON)
-if (CJSON_FOUND)
-	message(STATUS ${CJSON_FOUND})
-else (CJSON_FOUND)
-	message(STATUS "Optional dependency cJSON not found. Some features will be disabled.")
-endif(CJSON_FOUND)
+if (WITH_CJSON)
+    FIND_PACKAGE(cJSON)
+    if (CJSON_FOUND)
+	    message(STATUS ${CJSON_FOUND})
+    else (CJSON_FOUND)
+	    message(STATUS "Optional dependency cJSON not found. Some features will be disabled.")
+    endif(CJSON_FOUND)
+endif()
 
 # ========================================
 # Include projects
